# CPD_TimeShifter

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TimeShifter  build.ninja  cmake_install.cmake  compile_commands.json  outputWindow.cpp  outputWindow.hpp  testCaptions.sbv  time_Shifter.cpp
.cmake/api/v1/reply/: cache-v2-00d3bde6961048475efb.json  cmakeFiles-v1-addb918bfcb4bd6e1cce.json  codemodel-v2-7d15c53dcf7b5564bd89.json  index-2021-05-30T22-37-36-0402.json  target-TimeShifter-Debug-6a38755f1f9afeb41a5a.json  target-TimeShifter_autogen-Debug-a3682fea4e0aaad50e22.json  target-TimeShifter_autogen_timestamp_deps-Debug-7edd795278c35d664c2f.json
TimeShifter_autogen/: mocs_compilation.cpp
TimeShifter_autogen/EWIEGA46WW/: moc_outputWindow.cpp
captions/: fullCaptionsNoCut.sbv  output.sbv  saniCap.sbv  test.sbv  testShift.sbv  unshiftedCaptions.sbv
